NOTICKET: rename app methods in api to project
